# qt6-screencopy

./: CMakeLists.txt  README.md
debian/: control
src/: qt6-screencopy.h  qt6-screencopy.pc.in  screencopy.cpp  screencopy_p.h
